[project]
name = "reco-face-api"
version = "0.1.0"
description = "Face verification service for Student Attendance Check-in System using Uniface"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "Pillow>=10.1.0",
    "numpy>=1.24.3",
    "opencv-python>=4.8.1.78",
    "uniface>=0.1.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
